argocd/external-services/titlecardmakergui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-titlecardmakergui
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 34242
