argocd/external-services/titlecardmakergui/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-titlecardmakergui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`titlecardmaker.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-titlecardmakergui
        port: 34242
  tls:
    secretName: ext-cert-titlecardmakergui
